Update README with single particle outputs

--- a/README
+++ b/README
@@ -6,8 +6,13 @@ This project is for the Cimulation and Modeling course of the Summer
 ## TO-DO
 
  - [x] Setup
- - [ ] Newton's equations
- - [ ] Random configuration with sufficient particles
+ - [x] Single particle
+  - [x] Newton's equations
+  - [x] Potential definitions
+  - [x] Euler step
+ - [ ] Multi particle
+  - [ ] Random configuration with sufficient particles
+  - [ ] Verlet step
  - [ ] Implement damping
  - [ ] Try different time steps
  - [ ] Check energy conservation
@@ -31,8 +36,37 @@ To replicate results
  1. Install [poetry](https://python-poetry.org/docs/)
  2. Clone the repo
  3. `$ poetry install`
- 4. `python simulation.py`
+ 4. `$ python simulation.py`
 
 ## Outputs
 
- - ??
+### Single-particle with euler step
+
+#### Only harmonic force field
+
+<p float="left">
+  <img src="./img/single-particle/harmonic/trajectory.gif" width="300" />
+  <img src="./img/single-particle/harmonic/energy.png" width="400" />
+</p>
+
+#### Only lennard-jones force field
+
+<p float="left">
+  <img src="./img/single-particle/lennard-jones/trajectory.gif" width="300" />
+  <img src="./img/single-particle/lennard-jones/energy.png" width="400" />
+</p>
+
+#### Only morse force field
+
+<p float="left">
+  <img src="./img/single-particle/morse/trajectory.gif" width="300" />
+  <img src="./img/single-particle/morse/energy.png" width="400" />
+</p>
+
+#### Combined
+
+### Multi-particle
+
+### With euler step
+
+### With verlet step
